--- a/lab8(1).html
+++ b/lab8(1).html
@@ -2,8 +2,8 @@
 <html>
  <head>
    <title>lab8</title>
-<link rel="stylesheet" href="8.css">
-<script src="script8.js">
+<link rel="stylesheet" href="8(1).css">
+<script src="script8(1).js">
 </script>
  </head>
  <body onload="f1()">
