--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <li><a href="lab3.docx">Лабораторна робота 3</a></li>
 <li><a href="lab4.html">Лабораторна робота 4</a></li>
 <li><a href="modul.html">Контрольна робота </a></li>
+<li><a href="lab8(1).html">Лабораторна робота js</a></li>
 </ul>
 </div>
 <div id="b3" class="a1">
