--- a/lab8(1).html
+++ b/lab8(1).html
@@ -1,12 +1,31 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
- <head>
-   <title>lab8</title>
+<head>
+ <title>lab8</title>
 <link rel="stylesheet" href="8(1).css">
 <script src="script8(1).js">
 </script>
- </head>
- <body onload="f1()">
+ <meta charset=utf-8>
+ <link rel="stylesheet" type="text/css" href="sitestyle.css">
+</head>
+<body onload="f1()">
+<div id="mb">
+<div id="b1" class="c">
+<h1>Лабораторні роботи</h1>
+<h3>студентки 2 курсу групи 2МІ<br>Петрусенко Анни</h3>
+</div>
+<div id="b2" class="a1">
+<ul>
+<li><a href="site.html">Головна сторінка</a></li>
+<li><a href="lab1.html">Лабораторна робота 1</a></li>
+<li><a href="lab2.html">Лабораторна робота 2</a></li>
+<li><a href="lab3.docx">Лабораторна робота 3</a></li>
+<li><a href="lab4.html">Лабораторна робота 4</a></li>
+<li><a href="modul.html">Контрольна робота </a></li>
+<li><a href="lab8(1).html">Java Script</a></li>
+</ul>
+</div>
+<div id="b3" class="a1">
 <div id="MyDiv1" onclick="f1()">
 </div>
 <div id="MyDiv2" onclick="f2()">
@@ -20,6 +39,12 @@
 <div id="MyDiv6" onclick="f6()">
 </div>
 <div id="MyDiv7" onclick="f7()">
+</div>
+</div>
+<div id="b4" class="c">
+<p>&nbsp;&nbsp;&nbsp;&nbsp;
+&copy; Петрусенко Анна, 2018</p>
+</div>
 </div>
 </body>
 </html>
