--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <li><a href="lab4.html">Лабораторна робота 4</a></li>
 <li><a href="modul.html">Контрольна робота </a></li>
 <li><a href="lab8(1).html">Java Script</a></li>
+ <li><a href="JavaScript2.html">Java Script2</a></li>
 </ul>
 </div>
 <div id="b3" class="a1">
