--- a/JavaScript2.html
+++ b/JavaScript2.html
@@ -37,6 +37,7 @@ document появлением диалогового окна.</p>
 		<p><input id="tx1" type="text" value=""></p>
 				</form>
 </div>
+				</div>
 <div id="b4" class="c">
 <p>&nbsp;&nbsp;&nbsp;&nbsp;
 &copy; Петрусенко Анна, 2018</p>
