--- a/lab3.1.html
+++ b/lab3.1.html
@@ -21,6 +21,7 @@
 <li><a href="modul.html">Контрольна робота </a></li>
 <li><a href="lab8(1).html">Java Script</a></li>
  <li><a href="JavaScript2.html">Java Script2</a></li>
+<li><a href="lab3.1.html">Лабораторна робота 3.1(js)</a></li>
 </ul>
 </div>
 <div id="b3" class="a1">
