--- a/lab3.1.html
+++ b/lab3.1.html
@@ -3,7 +3,7 @@
 <head>
  <title>HTML/CSS</TITLE>
  <meta charset=utf-8>
- <link rel="stylesheet" href="sitestyle.css">	
+ <link rel="stylesheet" >	
 <script src="lab3.1.js">
 </head>
 <body>
