--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
  <title>HTML/CSS</TITLE>
  <meta charset=utf-8>
- <link rel="stylesheet" type="text/css" href="sitestyle.css"
+ <link rel="stylesheet" type="text/css" href="sitestyle.css">
 </head>
 <body>
 <div id="mb">
