--- a/JavaScript2.html
+++ b/JavaScript2.html
@@ -3,7 +3,7 @@
 <head>
  <title>HTML/CSS</TITLE>
 <link rel="stylesheet" href="style2js.css">
-			<script src="script2.js">
+			<script src="script2.js"></script>
  <meta charset=utf-8>
  <link rel="stylesheet" type="text/css" href="sitestyle.css"
 </head>
