--- a/lab3.1.html
+++ b/lab3.1.html
@@ -4,7 +4,7 @@
  <title>HTML/CSS</TITLE>
  <meta charset=utf-8>
  <link rel="stylesheet" type="text/css" href="sitestyle.css" >
-<script src="lab3.1.js">	
+<script src="lab3.1.js"></script>	
 </head>
 <body>
 <div id="mb">
