--- a/lab3.1.html
+++ b/lab3.1.html
@@ -28,10 +28,10 @@
 <div id="b3" class="a1">
  <p>Лабораторна  №3.1(Javascript)</p>
                 <form action="">
-                                        <p> Даны два числа. Вывести порядковый номер меньшего из них.</p>
+                                        <p>Даны два числа. Вывести большее из них</p>
 					<p>a = <input id="tx1" type="text" value=""></p>
 					<p>b = <input id="tx2" type="text" value=""></p>
- 					<p><input name="solution" type="button" value="Вывести порядковый номер меньшего" onclick="f1()"> </p>
+ 					<p><input name="solution" type="button" value="Вывести большее число" onclick="f1()"> </p>
 					<p>Решение <input id="tx3" type="text" value=""></p>
 				 </form>
 </div>
