--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </div>
 <div id="b2" class="a1">
 <ul>
-<li><a href="site.html">Головна сторінка</a></li>
+<li><a href="index.html">Головна сторінка</a></li>
 <li><a href="lab1.html">Лабораторна робота 1</a></li>
 <li><a href="lab2.html">Лабораторна робота 2</a></li>
 <li><a href="lab3.docx">Лабораторна робота 3</a></li>
