--- a/index.html
+++ b/index.html
@@ -1,9 +1,33 @@
-﻿<!doctype html>
+<!doctype html>
+<html>
+<head>
+<!doctype html>
 <html>
 <head>
  <title>HTML/CSS</TITLE>
  <meta charset=utf-8>
  <link rel="stylesheet" type="text/css" href="sitestyle.css">
+<script>
+var t;
+var r1=255;
+var g1=255;
+var b1=255;
+function f()
+{
+var x1=document.getElementById('b1');
+x1.style.left=(parseInt(x1.style.left)+100)+'px';
+x1.style.top=(parseInt(x1.style.top)+100)+'px';
+r1-=100;
+str1='rgb('+r1+', '+g1+', '+b1+')';
+x1.style.backgroundColor=str1;
+}
+function k()
+{t=setInterval('f()',1000);}
+function g()
+{
+clearInterval(t);
+}
+</script>
 </head>
 <body>
 <div id="mb">
@@ -32,5 +56,12 @@
 &copy; Петрусенко Анна, 2018</p>
 </div>
 </div>
+<div id="b1" style="position:absolute; top:0px; left:200px;background-color:#ffffff;">
+<img src="жук.png" alt="жук" id="tt1">
+</div>
+<form action="">
+ <p><input type="button" value="Решение" onclick="k()"/></p>
+ <p><input type="button" value="Стоп" onclick="g()"/></p>
+</form>
 </body>
 </html>
