--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ clearInterval(t);
 <img src="informatika.jpg" alt="Інформатика">
 </div>
  <div id="b10" style="position:absolute; top:0px; left:200px;background-color:#ffffff;">
-<img src="жук.png" width="10" alt="жук" id="tt1">
+<img src="жук.png" width="10%" alt="жук" id="tt1">
 </div>
 <form action="">
  <p><input type="button" value="Решение" onclick="k()"/></p>
