--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@ clearInterval(t);
   <li><a href="lab3.1.html">Лабораторна робота 3.1(js)</a></li>
 </ul>
 </div>
-<div id="b3" class="a1">
+<div id="b3" class="a1" style="position:relative;" >
 <img src="informatika.jpg" alt="Інформатика">
-</div>
  <div id="b10" style="position:absolute; top:0px; left:200px;background-color:#ffffff;">
 <img src="жук.png" style="width:10%" alt="жук" id="tt1">
 </div>
@@ -58,6 +57,8 @@ clearInterval(t);
  <p><input type="button" value="Решение" onclick="k()"/></p>
  <p><input type="button" value="Стоп" onclick="g()"/></p>
 </form>
+</div>
+ 
  <div id="b4" class="c">
 <p>&nbsp;&nbsp;&nbsp;&nbsp;
 &copy; Петрусенко Анна, 2018</p>
