--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ clearInterval(t);
 <li><a href="lab8(1).html">Java Script</a></li>
  <li><a href="JavaScript2.html">Java Script2</a></li>
   <li><a href="lab3.1.html">Лабораторна робота 3.1(js)</a></li>
+ <li><a href="lab3.2.html">Лабораторна робота 3.2</a></li>
 </ul>
 </div>
 <div id="b3" class="a1" style="position:relative;" >
