--- a/lab3.2.html
+++ b/lab3.2.html
@@ -27,6 +27,20 @@ function g()
 {
 clearInterval(t);
 }
+	function $(){
+
+			var elements = new Array();
+			for (var i = 0; i < arguments.length; i++) {
+				var element = arguments[i];
+				if (typeof element == 'string')
+				element = document.getElementById(element);
+				if (arguments.length == 1)
+				return element;
+				elements.push(element);
+		
+			}
+		return elements;
+		}
  function taylorFormula() {
 			
 			var x = document.getElementById('x').value;
