--- a/lab3.2.html
+++ b/lab3.2.html
@@ -41,7 +41,7 @@ clearInterval(t);
 			}
 		return elements;
 		}
- function taylorFormula() {
+ function(1) {
 			
 			var x = document.getElementById('x').value;
 			var n = document.getElementById('n').value;
@@ -100,7 +100,7 @@ X−X^/3+X^5/5 − . . . + (−1)^N ·X^2·N+1/(2·N+1).
 <form>
   		  <input type="number" name="x" id="x" placeholder="Число X">
   		  <input type="number" name="n" id="n" placeholder="Число N">
-  		  <input type="button" name="but" onclick="taylorFormula()" value="Сумма ряда">
+  		  <input type="button" name="but" onclick="function(1)" value="Сумма ряда">
   	    </form>
       <br>
   	<textarea cols="100" rows="2" id="result"></textarea>
