--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ clearInterval(t);
   <li><a href="lab3.1.html">Лабораторна робота 3.1(js)</a></li>
  <li><a href="lab3.2.html">Лабораторна робота 3.2</a></li>
   <li><a href="lab3.3.html">Лабораторна робота 3.3</a></li>
+  <li><a href="lab3.4.html">Лабораторна робота 3.4</a></li>
 </ul>
 </div>
 <div id="b3" class="a1" style="position:relative;" >
