--- a/lab3.4.html
+++ b/lab3.4.html
@@ -59,6 +59,8 @@ $('tx6').value=result;
   <li><a href="lab3.1.html">Лабораторна робота 3.1(js)</a></li>
  <li><a href="lab3.2.html">Лабораторна робота 3.2</a></li>
  <li><a href="lab3.3.html">Лабораторна робота 3.3</a></li>
+	 <li><a href="lab3.4.html">Лабораторна робота 3.4</a></li>
+	<li><a href="lab3.5.html">Лабораторна робота 3.5</a></li>
 </ul>
 </div>
   <p>Задание №39</p>
