--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ clearInterval(t);
   <li><a href="lab3.3.html">Лабораторна робота 3.3</a></li>
   <li><a href="lab3.4.html">Лабораторна робота 3.4</a></li>
  <li><a href="lab3.5.html">Лабораторна робота 3.5</a></li>
+ <li><a href="data.html">Калькулятор</a></li>
 </ul>
 </div>
 <div id="b3" class="a1" style="position:relative;" >
